--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,46 +32,268 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'GLOBAL_LOGGER' from 'logger' (/Users/Ram/projects/r3 /src/logger/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m model_loader\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/Users/Ram/projects/r3 /src/utils/model_loader.py:9\u001b[39m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_openai\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ChatOpenAI\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_groq\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ChatGroq\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlogger\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GLOBAL_LOGGER \u001b[38;5;28;01mas\u001b[39;00m log\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mexception\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcustom_exception\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ResearchAnalystException\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01masyncio\u001b[39;00m\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'GLOBAL_LOGGER' from 'logger' (/Users/Ram/projects/r3 /src/logger/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from src.utils import model_loader"
+    "from src.utils.model_loader import ModelLoader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "{\"timestamp\": \"2026-02-18T18:02:05.025980Z\", \"level\": \"warning\", \"event\": \"OPENAI_API_KEY is missing from environment\"}\n",
+      "{\"timestamp\": \"2026-02-18T18:02:05.027143Z\", \"level\": \"info\", \"event\": \"GOOGLE_API_KEY loaded from environment\"}\n",
+      "{\"timestamp\": \"2026-02-18T18:02:05.027658Z\", \"level\": \"info\", \"event\": \"GROQ_API_KEY loaded from environment\"}\n",
+      "{\"timestamp\": \"2026-02-18T18:02:05.028310Z\", \"level\": \"warning\", \"event\": \"ASTRA_DB_API_ENDPOINT is missing from environment\"}\n",
+      "{\"timestamp\": \"2026-02-18T18:02:05.028951Z\", \"level\": \"warning\", \"event\": \"ASTRA_DB_APPLICATION_TOKEN is missing from environment\"}\n",
+      "{\"timestamp\": \"2026-02-18T18:02:05.029360Z\", \"level\": \"warning\", \"event\": \"ASTRA_DB_KEYSPACE is missing from environment\"}\n",
+      "{\"config_keys\": [\"astra_db\", \"embedding_model\", \"retriever\", \"llm\"], \"timestamp\": \"2026-02-18T18:02:05.031998Z\", \"level\": \"info\", \"event\": \"YAML config loaded\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_loader = ModelLoader()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "{\"provider\": \"groq\", \"model\": \"openai/gpt-oss-20b\", \"timestamp\": \"2026-02-18T18:02:06.133351Z\", \"level\": \"info\", \"event\": \"Loading LLM\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "llm = model_loader.load_llm()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "HTTP Request: POST https://api.groq.com/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Hello! How can I help you today?', additional_kwargs={'reasoning_content': 'The user says \"hi\". We need to respond. The instruction: \"You are ChatGPT, a large language model trained by OpenAI.\" There\\'s no special instruction. Just respond politely.'}, response_metadata={'token_usage': {'completion_tokens': 57, 'prompt_tokens': 72, 'total_tokens': 129, 'completion_time': 0.058073654, 'completion_tokens_details': {'reasoning_tokens': 39}, 'prompt_time': 0.00379848, 'prompt_tokens_details': None, 'queue_time': 0.016363516, 'total_time': 0.061872134}, 'model_name': 'openai/gpt-oss-20b', 'system_fingerprint': 'fp_565badff47', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None}, id='run--019c71ea-9e47-7692-91f4-542ad79a0ccf-0', usage_metadata={'input_tokens': 72, 'output_tokens': 57, 'total_tokens': 129})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm.invoke('hi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from typing import List\n",
+    "from typing_extensions import TypedDict\n",
+    "from pydantic import BaseModel, Field\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.graph import StateGraph, START, END\n",
+    "from langchain_core.messages import AIMessage, HumanMessage, SystemMessage\n",
+    "from langgraph.checkpoint.memory import MemorySaver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Analyst(BaseModel):\n",
+    "    name: str = Field(description=\"Name of the analyst.\")\n",
+    "    role: str = Field(description=\"Role of the analyst in the context of the topic.\")\n",
+    "    affiliation: str = Field(description=\"Primary affiliation of the analyst.\")\n",
+    "    description: str = Field(description=\"Description of the analyst focus, concerns, and motives.\")\n",
+    "    \n",
+    "    @property\n",
+    "    def persona(self) -> str:\n",
+    "        return f\"Name: {self.name}\\nRole: {self.role}\\nAffiliation: {self.affiliation}\\nDescription: {self.description}\\n\"\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Perspectives(BaseModel):\n",
+    "       analysts: List[Analyst] = Field(description=\"Comprehensive list of analysts with their roles and affiliations.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GenerateAnalystsState(TypedDict):\n",
+    "    topic: str #research topic\n",
+    "    max_analysts: int # number of analyst\n",
+    "    human_analyst_feedback: str # Human feedback\n",
+    "    analysts: List[Analyst] # Analyst asking questions\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_analyst():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def human_feedback():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def should_continue():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image, display\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "StateGraph.__init__() missing 1 required positional argument: 'state_schema'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m builder = \u001b[43mStateGraph\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: StateGraph.__init__() missing 1 required positional argument: 'state_schema'"
+     ]
+    }
+   ],
+   "source": [
+    "builder = StateGraph()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'builder' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mbuilder\u001b[49m.add_node(\u001b[33m\"\u001b[39m\u001b[33mcreate_analyst\u001b[39m\u001b[33m\"\u001b[39m, create_analyst)\n",
+      "\u001b[31mNameError\u001b[39m: name 'builder' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "builder.add_node(\"create_analyst\", create_analyst)\n",
+    "builder.add_node(\"human_feedback\", human_feedback)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "builder.add_edge(START, \"create_analyst\")\n",
+    "builder.add_edge(\"create_analyst\", \"human_feedback\")\n",
+    "builder.add_conditional_edges(\"human_feedback\",\n",
+    "                                should_continue,\n",
+    "                                [\"create_analyst\",\n",
+    "                                END])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "memory = MemorySaver()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph = builder.compile(interrupt_before = [\"human_feedback\"], checkpointer = memory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(Image(graph.get_graph(xray=1).draw_mermaid_png()))\n"
+   ]
   }
  ],
  "metadata": {
