--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/Ram/projects/r3 /agent_env/bin/python\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -41,67 +33,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "{\"timestamp\": \"2026-02-18T18:02:05.025980Z\", \"level\": \"warning\", \"event\": \"OPENAI_API_KEY is missing from environment\"}\n",
-      "{\"timestamp\": \"2026-02-18T18:02:05.027143Z\", \"level\": \"info\", \"event\": \"GOOGLE_API_KEY loaded from environment\"}\n",
-      "{\"timestamp\": \"2026-02-18T18:02:05.027658Z\", \"level\": \"info\", \"event\": \"GROQ_API_KEY loaded from environment\"}\n",
-      "{\"timestamp\": \"2026-02-18T18:02:05.028310Z\", \"level\": \"warning\", \"event\": \"ASTRA_DB_API_ENDPOINT is missing from environment\"}\n",
-      "{\"timestamp\": \"2026-02-18T18:02:05.028951Z\", \"level\": \"warning\", \"event\": \"ASTRA_DB_APPLICATION_TOKEN is missing from environment\"}\n",
-      "{\"timestamp\": \"2026-02-18T18:02:05.029360Z\", \"level\": \"warning\", \"event\": \"ASTRA_DB_KEYSPACE is missing from environment\"}\n",
-      "{\"config_keys\": [\"astra_db\", \"embedding_model\", \"retriever\", \"llm\"], \"timestamp\": \"2026-02-18T18:02:05.031998Z\", \"level\": \"info\", \"event\": \"YAML config loaded\"}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_loader = ModelLoader()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "{\"provider\": \"groq\", \"model\": \"openai/gpt-oss-20b\", \"timestamp\": \"2026-02-18T18:02:06.133351Z\", \"level\": \"info\", \"event\": \"Loading LLM\"}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "llm = model_loader.load_llm()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "HTTP Request: POST https://api.groq.com/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='Hello! How can I help you today?', additional_kwargs={'reasoning_content': 'The user says \"hi\". We need to respond. The instruction: \"You are ChatGPT, a large language model trained by OpenAI.\" There\\'s no special instruction. Just respond politely.'}, response_metadata={'token_usage': {'completion_tokens': 57, 'prompt_tokens': 72, 'total_tokens': 129, 'completion_time': 0.058073654, 'completion_tokens_details': {'reasoning_tokens': 39}, 'prompt_time': 0.00379848, 'prompt_tokens_details': None, 'queue_time': 0.016363516, 'total_time': 0.061872134}, 'model_name': 'openai/gpt-oss-20b', 'system_fingerprint': 'fp_565badff47', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None}, id='run--019c71ea-9e47-7692-91f4-542ad79a0ccf-0', usage_metadata={'input_tokens': 72, 'output_tokens': 57, 'total_tokens': 129})"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "llm.invoke('hi')"
    ]
@@ -173,12 +125,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analyst_instructions=\"\"\"You are tasked with creating a set of AI analyst personas. Follow these instructions carefully:\n",
+    "\n",
+    "1. First, review the research topic:\n",
+    "{topic}\n",
+    "        \n",
+    "2. Examine any editorial feedback that has been optionally provided to guide creation of the analysts: \n",
+    "        \n",
+    "{human_analyst_feedback}\n",
+    "    \n",
+    "3. Determine the most interesting themes based upon documents and / or feedback above.\n",
+    "                    \n",
+    "4. Pick the top {max_analysts} themes.\n",
+    "\n",
+    "5. Assign one analyst to each theme.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print([analyst_instructions.format(\n",
+    "        topic=\"education\",\n",
+    "        max_analysts=4,\n",
+    "        human_analyst_feedback=\"please exaplain only on AI\"\n",
+    "        \n",
+    "        )] + [\"Generate the set of analysts.\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_analyst():\n",
-    "    pass"
+    "def create_analyst(state:GenerateAnalystsState):\n",
+    "    \"\"\"\n",
+    "    it is creating my analyst\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    topic = state[\"topic\"]\n",
+    "    max_analysts = state[\"max_analysts\"]\n",
+    "    human_analyst_feedback = state.get(\"human_analyst_feedback\",\"\")\n",
+    "    \n",
+    "    structured_llm = llm.with_structured_output(Perspectives)\n",
+    "    \n",
+    "    system_messages = analyst_instructions.format(\n",
+    "        topic=topic,\n",
+    "        max_analysts=max_analysts,\n",
+    "        human_analyst_feedback=human_analyst_feedback\n",
+    "        \n",
+    "        )\n",
+    "    analysts = structured_llm.invoke([SystemMessage(content=system_messages)]+ [HumanMessage(content=\"Generate the set of analysts.\")])\n",
+    "    \n",
+    "    # Write the list of analysis to state\n",
+    "    return {\"analysts\": analysts.analysts}"
    ]
   },
   {
@@ -212,21 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "StateGraph.__init__() missing 1 required positional argument: 'state_schema'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m builder = \u001b[43mStateGraph\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: StateGraph.__init__() missing 1 required positional argument: 'state_schema'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "builder = StateGraph()\n",
     "\n"
@@ -234,21 +229,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'builder' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mbuilder\u001b[49m.add_node(\u001b[33m\"\u001b[39m\u001b[33mcreate_analyst\u001b[39m\u001b[33m\"\u001b[39m, create_analyst)\n",
-      "\u001b[31mNameError\u001b[39m: name 'builder' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "builder.add_node(\"create_analyst\", create_analyst)\n",
     "builder.add_node(\"human_feedback\", human_feedback)"
